--- a/Boruto Eps1.html
+++ b/Boruto Eps1.html
@@ -20,14 +20,20 @@ body {background:black;color:grey;}
   <h2>Boruto Naruto Next Generations Episode 01 Subtitle Indonesia - Free Streaming and Free Download</h2>
   <p>Kirim pesan di <a href="https://cardonatecode.blogspot.com/p/contact.html" target="iframe">sini</a> jika terjadi eror pada Video atau Link Download, agar cepat kami tanggapi</p>
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" name="iframe" src="https://m.media-amazon.com/images/M/MV5BNjZiYzliYjEtOWNkYi00ODNhLTllYTctYjZmNDg0ODQyYjA0XkEyXkFqcGdeQXVyMzExMzk5MTQ@.jpg"></iframe>
+    <iframe class="embed-responsive-item" name="iframe" src="https://i.pinimg.com/564x/30/d2/48/30d24871072c7bb09390fc161084dd5c.jpg"></iframe>
   </div>
 </div>
 <center>
 <p><a href="https://www.mp4upload.com/embed-tkmpijfooj4l.html" target="iframe"><button class="tombol">Server 1</button></a> <a href="https://www.mp4upload.com/embed-xjdtjm4abbac.html" target="iframe"><button class="tombol">Server 2</button></a></p>
-<p>360p = <a href="http://bit.ly/2P92ijd">Mp4upload</a> | <a href="http://bit.ly/30xU7hs">Clicknupload</a></p>
-<p>480p = <a href="http://bit.ly/2ZaNeGq">Mp4upload</a> | <a href="http://bit.ly/2ZbsRsJ">Clicknupload</a></p>
-<p>720p = <a href="http://bit.ly/2NtrZbF">Mp4upload</a> | <a href="http://bit.ly/30vBb2R">Clicknupload</a></p>
+<p>360p = 
+<a href="http://bit.ly/2P92ijd">Mp4upload</a> | 
+<a href="http://bit.ly/30xU7hs">Clicknupload</a></p>
+<p>480p = 
+<a href="http://bit.ly/2ZaNeGq">Mp4upload</a> | 
+<a href="http://bit.ly/2ZbsRsJ">Clicknupload</a></p>
+<p>720p = 
+<a href="http://bit.ly/2NtrZbF">Mp4upload</a> | 
+<a href="http://bit.ly/30vBb2R">Clicknupload</a></p>
 </center>
 </body>
 </html>
